# miniJVM

./: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md
.github/workflows/: github-actions-demo.yml
binary/: README.md  build_jar.bat  build_jar.sh  build_mac_linux.sh  build_maven_lib.bat  build_maven_lib.sh  build_wini686.bat  build_winx64.bat
binary/centos_x64/: test.sh
binary/lib/: .gitignore
binary/mac_arm64/: test.sh
binary/mac_x64/: .gitignore  test.sh
binary/macos/: test.sh
binary/res/: .gitignore  BpDeepTest.java
binary/win32/: .gitignore  test.bat
binary/win_x64/: test.bat
desktop/awtk_gui/: README.md
desktop/glfw_gui/c/: CMakeLists.txt  jni_gl.c  jni_glfw.c  jni_minial.c  jni_nanovg.c  media.c  media.h
desktop/glfw_gui/java/: gui.puml  pom.xml
desktop/jni_test/c/: CMakeLists.txt
desktop/jni_test/java/: pom.xml
desktop/minijvm_test/: pom.xml
doc/: api.md
docs/: index.html
extlib/xgui/: .gitignore  pom.xml
gh-pages/: index.html
j2c/: README.md
j2c/app/: .gitignore  CMakeLists.txt
j2c/app/platform/desktop/: main.c
j2c/app/platform/mobile/: glad.c  glad.h  glad_jni_assist.h  glfm.h  glfm_platform_android.c  glfm_platform_ios.m  jni_gl.c  jni_glfm.c  jni_minial.m  jni_nanovg.c  linmath.h  main.c  media.c  media.h
j2c/app/vm/: arraylist.c  arraylist.h  bytebuf.h  dirent_win.h  garbage.c  garbage.h  hashtable.c  hashtable.h  jassist.c  jni.c  jni.h  jvm.c  jvm.h  jvmsvc.c  jvmtype.h  miniz_wrapper.c  miniz_wrapper.h  native_std.c  spinlock.h  tinycthread.c  tinycthread.h  utf8string.c  utf8string.h
j2c/app/vm/https/: ssl_client.c  ssl_client.h
j2c/app/vm/https/mbedtls/include/mbedtls/: config.h
j2c/translator/: .gitignore  pom.xml
minijvm/c/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  cmake_install.cmake  jni_lwjgl.c  main.c
minijvm/c/jvm/: class.c  class_load.c  garbage.c  garbage.h  global.c  glut_keys.h  heapdump_hprof.c  heapdump_hprof.h  interpreter.c  java_native_io.c  java_native_io.h  java_native_reflect.c  java_native_reflect.h  java_native_std.c  java_native_std.h  jdwp.c  jdwp.h  jit.c  jit.h  jni_awt.c  jni_io.c  jni_lwjgl.c  jni_lwjgl_display.c  jni_lwjgl_input.c  jni_lwjgl_keyboard.c  jni_lwjgl_mouse.c  jni_lwjgl_platform_glut.c  jni_lwjgl_util.c  jni_reflect.c  jni_std.c  jvm.c  jvm.h  jvm_util.c  jvm_util.h  os_posix.c  os_win.c  runtime.c
minijvm/c/utils/: arraylist.c  arraylist.h  bytebuf.c  bytebuf.h  d_type.c  d_type.h  hashset.c  hashset.h  hashtable.c  hashtable.h  linkedlist.c  linkedlist.h  ltalloc.c  ltalloc.h  miniz_wrapper.c  miniz_wrapper.h  pairlist.h  spinlock.h  tinycthread.c  tinycthread.h  utf8_string.c  utf8_string.h
minijvm/c/utils/https/: ca_cert.h  https.c  https.h  ssl_client.c  ssl_client.h
minijvm/c/utils/mimalloc/include/mimalloc/: types.h
minijvm/c/utils/mimalloc/src/: stats.c
minijvm/c/utils/sljit/: sljitConfig.h
minijvm/c/utils/sljit/allocator_src/: sljitExecAllocatorApple.c
minijvm/java/: pom.xml
mobile/: .gitignore  arch.docx  arch.vsd  build_jar.bat  build_jar.sh  ~$$arch.~vsd
mobile/androidapp/: .gitignore  build.gradle  local.properties  minijvm_key.jks
mobile/androidapp/app/: .gitignore  CMakeLists.txt  build.gradle  lint-baseline.xml
mobile/androidapp/app/src/main/: AndroidManifest.xml
mobile/androidapp/app/src/main/java/org/minijvm/activity/: JvmNativeActivity.java
mobile/androidapp/app/src/main/java/org/minijvm/activity/bridge/: Base64.java  JsonParser.java  JsonPrinter.java  RMCDescriptor.java  ReflectUtil.java
mobile/androidapp/app/src/main/java/org/minijvm/activity/wxapi/: WXPayEntryActivity.java
mobile/androidapp/app/src/main/res/layout/: activity_video_view.xml
mobile/androidapp/app/src/main/res/values/: strings.xml
mobile/androidapp/gradle/wrapper/: gradle-wrapper.properties
mobile/assets/resfiles/: README.md
mobile/c/glfm/: IAPManager.h  IAPManager.m  glfm.h  glfm_android.c  glfm_apple.m  glfm_emscripten.c  glfm_internal.h  glfm_platform.h  glfm_platform_android.c  glfm_platform_ios.m
mobile/c/glfmapp/: main.c
mobile/c/gui/: jni_gl.c  jni_glfm.c  jni_gui.c  jni_gui.h  jni_minial.m  jni_nanovg.c  jni_nanovg_assist.h  jni_stb_assist.h  media.c  media.h
mobile/c/gui/glad/: glad.c  glad.h
mobile/c/gui/minial/: mini_al.h  miniaudio.h
mobile/c/gui/nanovg/: fontstash.h  nanovg.c  nanovg.h  nanovg_gl.h  nanovg_gl_utils.h  nanovg_jni_assist.h
mobile/c/gui/other/: linmath.h
mobile/c/gui/stb/: stb_image_write.h  stb_truetype.h
mobile/iosapp/iosapp/: Info.plist  iosapp.entitlements
mobile/iosapp/iosapp.xcodeproj/: project.pbxproj
mobile/iosapp/iosapp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mobile/java/: .gitignore  copyjar.sh
mobile/java/ExApp/: build.xml  pom.xml
mobile/java/ExApp/nbproject/: build-impl.xml  (+3 more)
mobile/java/ExGame/: pom.xml
mobile/java/UiApp/: build.xml
mobile/java/glfm_gui/: pom.xml
mobile/java/guilib/: build.xml
screenshot/: api.md
test/javalib_test/: .classpath  bb.txt  build.xml
test/javalib_test/nbproject/: build-impl.xml  build-impl.xml~  genfiles.properties  project.properties  project.xml
test/jni_test/: CMakeLists.txt  jni_ex.c
test/jni_test/c/: jni_ex.c
test/jni_test/java/: build.xml  pom.xml
test/jni_test/java/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
test/jni_test/java/nbproject/private/: private.properties
test/jni_test/java/src/main/java/test/: JniTest.java
test/jvm_ios/: invokec.c  iostestTests-Bridging-Header.h
test/jvm_ios/iostest/: AppDelegate.swift  Info.plist  ViewController.swift
test/jvm_ios/iostest.xcodeproj/: project.pbxproj
test/jvm_ios/iostestTests/: Info.plist  iostestTests.swift
test/jvm_ios/iostestUITests/: Info.plist  iostestUITests.swift
test/jvm_macos/: gui.cfg
test/jvm_macos/jvm_macos/: invoke.c  jvm_macos-Bridging-Header.h  main.swift  pcallstack.m
test/jvm_macos/jvm_macos.xcodeproj/: project.pbxproj
test/jvm_vs/: .gitignore  gui.vcxproj  gui.vcxproj.filters  mini_jvm.sln  mini_jvm.vcxproj  mini_jvm.vcxproj.filters
test/minijvm_test/: pom.xml
(+1324 files in other folders)
